RESOLVED FIXED99193
[Chromium] IndexedDB: WebKit API plumbing to pass abort reason code/message to script
https://bugs.webkit.org/show_bug.cgi?id=99193
Summary [Chromium] IndexedDB: WebKit API plumbing to pass abort reason code/message t...
Joshua Bell
Reported 2012-10-12 11:39:15 PDT
[Chromium] IndexedDB: WebKit API plumbing to pass abort reason code/message to script
Attachments
Patch (1.97 KB, patch)
2012-10-12 11:41 PDT, Joshua Bell
no flags
Joshua Bell
Comment 1 2012-10-12 11:41:19 PDT
WebKit Review Bot
Comment 2 2012-10-12 11:44:23 PDT
Please wait for approval from abarth@webkit.org, dglazkov@chromium.org, fishd@chromium.org, jamesr@chromium.org or tkent@chromium.org before submitting, as this patch contains changes to the Chromium public API. See also https://trac.webkit.org/wiki/ChromiumWebKitAPI.
Joshua Bell
Comment 3 2012-10-12 11:47:49 PDT
abarth@ - r? Full landing sequence: 1) http://webkit.org/b/99193 (adds new method to API) - THIS CHANGE 2) http://crrev.com/11114022 (chromium plumbing that handles old/new) 3) http://webkit.org/b/99097 (the real change) 4) TBD: Remove legacy path on chromium side 5) TBD: Remove old method API in chromium public webkit API
WebKit Review Bot
Comment 4 2012-10-12 13:36:33 PDT
Comment on attachment 168453 [details] Patch Clearing flags on attachment: 168453 Committed r131219: <http://trac.webkit.org/changeset/131219>
WebKit Review Bot
Comment 5 2012-10-12 13:36:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.