third_party/WebKit/Source/WebKit/chromium/public/WebIDBTransactionCallbacks.h
@@ -30,11 +30,16 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "platform/WebCommon.h"
 
 namespace WebKit {
+
+class WebIDBDatabaseError;
+
 class WebIDBTransactionCallbacks {
 public:
     virtual ~WebIDBTransactionCallbacks() { }
 
+    // FIXME: Remove after callers are updated following WK99097.
     virtual void onAbort() { WEBKIT_ASSERT_NOT_REACHED(); }
+    virtual void onAbort(const WebIDBDatabaseError&) { WEBKIT_ASSERT_NOT_REACHED(); }
     virtual void onComplete() { WEBKIT_ASSERT_NOT_REACHED(); }
 };
 
